Fixed various spacing issues

--- a/kisan-e-mitra/Content/Botchat.css
+++ b/kisan-e-mitra/Content/Botchat.css
@@ -46,7 +46,6 @@
 .message-content {
     padding: 10px;
     border-radius: 25px;
-    line-break: anywhere;
     flex-grow: 1;
 }
 
